refs #45402: Setting up blocks spacings and fixing minor issues.

--- a/web/themes/custom/gt_honors/patterns/molecules/metrics_card/scss/styles.scss
+++ b/web/themes/custom/gt_honors/patterns/molecules/metrics_card/scss/styles.scss
@@ -63,8 +63,3 @@
     }
   }
 }
-
-// TODO: Refactor this temporary solution.
-.metrics-card {
-  margin-bottom: 48px;
-}
